# MotionServer

./: .gitignore  Cargo.toml  README.md  compile_upload_server.sh  server.json  testme.sh
aimcjog/: Cargo.toml
aimcjog/src/: main.rs  parser.rs
libaimc/: Cargo.toml
libaimc/src/: aimc.rs  aimc_protocol.rs  lib.rs
server/: Cargo.toml
server/src/: aimc_config.rs  dispatcher.rs  generic_message.rs  lib.rs  linear_mapping.rs  main.rs  trace_device.rs
src/: aimc.rs  aimc_config.rs  aimc_conversion.rs  dispatcher.rs  generic_message.rs  i2c_trace_mock.rs  lib.rs  main.rs
src/aimc/: aimc.rs  aimc_config.rs  aimc_protocol.rs  mod.rs
test_client/: Cargo.toml
test_client/src/: main.rs
