[package]
name = "server"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.39"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.6"
env_logger = "0.6.1"
libaimc = { path = "../libaimc", features = ["serde_support"] }
